# gpr200-fa2023-zack-olson

./: CMakeLists.txt  LICENSE  README.md
assignments/assignment1_helloTriangle/: CMakeLists.txt  main.cpp
assignments/assignment2_sunset/: CMakeLists.txt  main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: CMakeLists.txt  main.cpp
assignments/assignment3_textures/assets/: backgroundShader.frag  backgroundShader.vert  characterShader.frag  characterShader.vert  fragmentShader.frag
assignments/assignment4_transformations/: CMakeLists.txt  main.cpp
assignments/assignment4_transformations/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment5_camera/: CMakeLists.txt  main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: CMakeLists.txt  main.cpp
assignments/assignment6_proceduralGeometry/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment7_lighting/: CMakeLists.txt  main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  defaultLit.vert  fragmentShader.frag  unlit.frag  unlit.vert  vertexShader.vert
core/ew/: camera.h  cameraController.cpp  cameraController.h  mesh.cpp  mesh.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  transform.h
core/ew/ewMath/: ewMath.h  mat4.h  transformations.h  vec2.h  vec3.h  vec4.h
core/zoo/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformations.h
